inc/engine.h

#define range(var,start,end,step) for (uint32_t var=start;var<end;var+=step)