siberian_ctypes.py


    @globalPosition.setter
    def globalPosition(self, value: Sequence[float]):
        _siberian.fFormSetGlobalPosition(self, value[0], value[1])

    @property
    def localPosition(self) -> Sequence[float]:
        pos = (c_float*2)()
        _siberian.fFormGetLocalPosition(self, pos)
        return [float(pos[0]),float(pos[1])]

    @localPosition.setter
    def localPosition(self, value: Sequence[float]):
        _siberian.fFormSetLocalPosition(self, value[0], value[1])

    @property
    def childCount(self) -> int:
        return int(_siberian.fFormGetChildCount(self))

    def __iter__(self):
        self._iteration = 0
        self._iteration_length = _siberian.fFormGetChildCount(self)
        return self

    def __next__(self):
        num = self._iteration
        self._iteration += 1
        if self._iteration_length != _siberian.fFormGetChildCount(self):
            raise RuntimeError("fForm child list changed size during iteration")
        elif num >= _siberian.fFormGetChildCount(self):
            raise StopIteration
        else:
            return _siberian.fFormGetChild(self, num).contents

    def getChild(self, index: int) -> fForm:
        if index < self.childCount:
            return _siberian.fFormGetChild(self, index).contents
        raise IndexError("fForm child list index out of range")

    def removeParent(self):
        _siberian.fFormRemoveParent(self)
    
    def delete(self):
        for i in range(self.childCount):
            self.getChild(i).delete()
        fForm.__instances__[addressof(self)]['MARK_DELETE'] = True
        _siberian.fFormMarkDelete(self)

    def addForm(self, form: fForm):
        _siberian.fFormAddForm(self, form)

    def addElement(self, width: float, height: float, text:str=None, font_size:int=8) -> fElement:
        if isinstance(text, str):
            text = text.encode('1251')
        elif isinstance(text, bytes) or text is None:
            pass
        else:
            text = str(text).encode('1251')
        return _siberian.fFormAddElement(self, text, int(font_size), width, height).contents

    def setIdle(self, cb : Callable[[fForm], None]):
        callback = lambda form : cb(form.contents)
        c_callback = fFormCallback(callback)
        _siberian.fFormSetIdle(self, c_callback)
        fForm.__instances__[addressof(self)]['idleCallback'] = c_callback

    def setLMB(self, cb : Callable[[fForm], None]):
        callback = lambda form : cb(form.contents)
        c_callback = fFormCallback(callback)
        _siberian.fFormSetLMB(self, c_callback)
        fForm.__instances__[addressof(self)]['lmbCallback'] = c_callback

    def setRMB(self, cb : Callable[[fForm], None]):
        callback = lambda form : cb(form.contents)
        c_callback = fFormCallback(callback)
        _siberian.fFormSetRMB(self, c_callback)
        fForm.__instances__[addressof(self)]['rmbCallback'] = c_callback

    def setScroll(self, cb : Callable[[fForm, int], None]):
        callback = lambda form,scroll : cb(form.contents, scroll)
        c_callback = fFormScrollCallback(callback)
        _siberian.fFormSetScroll(self, c_callback)
        fForm.__instances__[addressof(self)]['scrollCallback'] = c_callback

    def setCursorHover(self, cb : Callable[[fForm], None]):
        callback = lambda form : cb(form.contents)
        c_callback = fFormCallback(callback)
        _siberian.fFormSetCursorHover(self, c_callback)
        fForm.__instances__[addressof(self)]['hoverCallback'] = c_callback

    def setCursorRelease(self, cb : Callable[[fForm], None]):
        callback = lambda form : cb(form.contents)
        c_callback = fFormCallback(callback)
        _siberian.fFormSetCursorLeave(self, c_callback)
        fForm.__instances__[addressof(self)]['unhoverCallback'] = c_callback

    def translateGlobal(self, x : float, y : float):
        _siberian.fFormTranslateGlobal(self, x, y)

    def translateLocal(self, x : float, y : float):
        _siberian.fFormTranslateLocal(self, x, y)

    def rotate(self, angle : float):
        _siberian.fFormRotate(self, angle)

    def __getitem__(self, key):
        return fForm.__instances__[addressof(self)]["attribs"][key]

    def __setitem__(self, key, value):
        fForm.__instances__[addressof(self)]["attribs"][key] = value

    def __contains__(self, item):
        return item in fForm.__instances__[addressof(self)]["attribs"]

    @staticmethod
    def clearDeletedForms(*args):
        for k in list(fForm.__instances__.keys()):
            v = fForm.__instances__[k]
            if 'MARK_DELETE' in v:
                del fForm.__instances__[k]
                del v
    @staticmethod
    def setPostFunctionInterval(interval):
        _siberian.fFormsSetPostFunctionInterval(interval)
    

fForm_p = POINTER(fForm)

fFormCallback = CFUNCTYPE(None, fForm_p)
fFormScrollCallback = CFUNCTYPE(None, fForm_p, c_int)

_siberian.fFormCreate.argtypes = tuple()
_siberian.fFormCreate.restype = fForm_p

fFormCreate = lambda : _siberian.fFormCreate().contents

_siberian.fFormSetXRayBit.argtypes = (fForm_p,c_bool)
_siberian.fFormSetXRayBit.restype = None

_siberian.fFormGetXRayBit.argtypes = (fForm_p,)
_siberian.fFormGetXRayBit.restype = c_bool

_siberian.fFormConstructor.argtypes = (fForm_p,)
_siberian.fFormConstructor.restype = None

_siberian.fFormRemoveParent.argtypes = (fForm_p,)
_siberian.fFormRemoveParent.restype = None

_siberian.fFormMarkDelete.argtypes = (fForm_p,)
_siberian.fFormMarkDelete.restype = None

_siberian.fFormAddForm.argtypes = (fForm_p, fForm_p)
_siberian.fFormAddForm.restype = None

_siberian.fFormAddElement.argtypes = (fForm_p, c_char_p, c_int, c_float, c_float)
_siberian.fFormAddElement.restype = fElement_p

_siberian.fFormSetIdle.argtypes = (fForm_p, fFormCallback)
_siberian.fFormSetIdle.restype = None

_siberian.fFormSetLMB.argtypes = (fForm_p, fFormCallback)
_siberian.fFormSetLMB.restype = None

_siberian.fFormSetRMB.argtypes = (fForm_p, fFormCallback)
_siberian.fFormSetRMB.restype = None

_siberian.fFormSetScroll.argtypes = (fForm_p, fFormScrollCallback)
_siberian.fFormSetScroll.restype = None

_siberian.fFormSetCursorHover.argtypes = (fForm_p, fFormCallback)
_siberian.fFormSetCursorHover.restype = None

_siberian.fFormSetCursorLeave.argtypes = (fForm_p, fFormCallback)
_siberian.fFormSetCursorLeave.restype = None

_siberian.fFormSetTopLayer.argtypes = (fForm_p,)
_siberian.fFormSetTopLayer.restype = None

#_siberian.fFormSetBottomLayer.argtypes = (fForm_p,)
#_siberian.fFormSetBottomLayer.restype = None

#_siberian.fFormSetLayerUp.argtypes = (fForm_p,)
#_siberian.fFormSetLayerUp.restype = None

#_siberian.fFormSetLayerDown.argtypes = (fForm_p,)
#_siberian.fFormSetLayerDown.restype = None

_siberian.fFormSetLocalPosition.argtypes = (fForm_p, c_float, c_float)
_siberian.fFormSetLocalPosition.restype  = None

_siberian.fFormSetGlobalPosition.argtypes = (fForm_p, c_float, c_float)
_siberian.fFormSetGlobalPosition.restype  = None

_siberian.fFormGetLocalPosition.argtypes = (fForm_p, POINTER(c_float))
_siberian.fFormGetLocalPosition.restype  = None

_siberian.fFormGetGlobalPosition.argtypes = (fForm_p, POINTER(c_float))
_siberian.fFormGetGlobalPosition.restype  = None

_siberian.fFormTranslateLocal.argtypes = (fForm_p, c_float, c_float)
_siberian.fFormTranslateLocal.restype  = None

_siberian.fFormTranslateGlobal.argtypes = (fForm_p, c_float, c_float)
_siberian.fFormTranslateGlobal.restype  = None

_siberian.fFormScrollVertical.argtypes = (fForm_p, c_float)
_siberian.fFormScrollVertical.restype = None

_siberian.fFormScrollHorizontal.argtypes = (fForm_p, c_float)
_siberian.fFormScrollHorizontal.restype = None

_siberian.fFormSetVerticalScrolling.argtypes = (fForm_p, c_float)
_siberian.fFormSetVerticalScrolling.restype  = None

_siberian.fFormSetHorizontalScrolling.argtypes = (fForm_p, c_float)
_siberian.fFormSetHorizontalScrolling.restype  = None

_siberian.fFormGetVerticalScrolling.argtypes = (fForm_p,)
_siberian.fFormGetVerticalScrolling.restype  = c_float

_siberian.fFormGetHorizontalScrolling.argtypes = (fForm_p,)
_siberian.fFormGetHorizontalScrolling.restype  = c_float

_siberian.fFormRotate.argtypes = (fForm_p,c_float)
_siberian.fFormRotate.restype = None

_siberian.fFormSetRotationLocal.argtypes = (fForm_p, c_float)
_siberian.fFormSetRotationLocal.restype  = None

_siberian.fFormSetRotationGlobal.argtypes = (fForm_p, c_float)
_siberian.fFormSetRotationGlobal.restype  = None

_siberian.fFormGetLocalRotation.argtypes = (fForm_p,)
_siberian.fFormGetLocalRotation.restype  = c_float

_siberian.fFormGetGlobalRotation.argtypes = (fForm_p,)
_siberian.fFormGetGlobalRotation.restype  = c_float

_siberian.fFormGetWidth.argtypes = (fForm_p,)
_siberian.fFormGetWidth.restype  = c_float

_siberian.fFormSetWidth.argtypes = (fForm_p,c_float)
_siberian.fFormSetWidth.restype  = None

_siberian.fFormGetHeight.argtypes = (fForm_p,)
_siberian.fFormGetHeight.restype  = c_float

_siberian.fFormSetHeight.argtypes = (fForm_p,c_float)
_siberian.fFormSetHeight.restype  = None

_siberian.fFormGetChildCount.argtypes = (fForm_p,)
_siberian.fFormGetChildCount.restype = c_int

_siberian.fFormGetChild.argtypes = (fForm_p, c_int)
_siberian.fFormGetChild.restype = fForm_p

fFormsCallback = CFUNCTYPE(None)

_siberian.fFormsSetPostFunction.argtypes = (fFormsCallback, )
_siberian.fFormsSetPostFunction.restype = None

_siberian.fFormsSetPostFunctionInterval.argtypes = (c_int, )
_siberian.fFormsSetPostFunctionInterval.restype = None

__fFormGC = fFormsCallback(fForm.clearDeletedForms)

class fButton(Structure):
    _fields_ = [('__data', uint8_t*224)]
    __instances__ = {}
    
    def __init__(self, text, x, y, width, height, callback=None):
        text = c_string(text)
        struct = fButton.__instances__[addressof(self)] = {}
        struct['attribs'] = {}
        if callback is None:
            _siberian.fButtonConstructor(pointer(self), text, x, y, width, height, None)
        else:
            callback = buttonCallback(callback)
            _siberian.fButtonConstructor(pointer(self), text, x, y, width, height, callback)
            struct['callback'] = callback

    def setCallback(self, callback):
        struct = fButton.__instances__[addressof(self)]
        callback = buttonCallback(callback)
        _siberian.fButtonSetCallback(self, callback)
        struct['callback'] = callback

    def setText(self, text):
        text = c_string(text)
        _siberian.fButtonSetText(self, text)

    def delete(self):
        del fButton.__instances__[addressof(self)]
        _siberian.fButtonDelete(self)

buttonCallback = CFUNCTYPE(None, POINTER(fButton))

_siberian.fButtonConstructor.argtypes = (POINTER(fButton), c_char_p, c_int, c_int, c_int, c_int)
_siberian.fButtonConstructor.restype = None

_siberian.fButtonSetCallback.argtypes = (POINTER(fButton), buttonCallback)
_siberian.fButtonSetCallback.restype = None

_siberian.fButtonSetText.argtypes = (POINTER(fButton), c_char_p)
_siberian.fButtonSetText.restype = None

_siberian.fButtonDelete.argtypes = (POINTER(fButton),)
_siberian.fButtonDelete.restype = None

class fList(Structure):
    _fields_ = [('__data', uint8_t*224)]
    __instances__ = {}
    
    def __init__(self, x, y, width, height, callback):
        struct = fButton.__instances__[addressof(self)] = {}
        struct['callback'] = {}
        struct['callback']['py'] = callback
        struct['callback']['c'] = listCallback(callback)
        _siberian.fListConstructor(pointer(self), x, y, width, height, struct['callback']['c'])

    def addItem(self, text):
        if isinstance(text, bytes):
            pass
        elif isinstance(text, str):
            text = text.encode('cp1251')
        else:
            text = str(text).encode('cp1251')
        _siberian.fListAddItem(self, text)
